# RAG_project

./: pyproject.toml  requirements.txt
docs/: Sprint 2 Mission Plan.md  sprint_1_closeout.md
src/: __init__.py  app.py  config.py  generator.py  ingestion.py  retriever.py
vectorstore/: index.faiss  index.pkl
